--- a/search.html
+++ b/search.html
@@ -8,12 +8,11 @@
       height: 100vh; margin: 0; padding: 0;
       font-family: 'Roboto', sans-serif;
     }
-    /* Container holds the sliding panel and main content */
     #container {
       position: relative;
       width: 100%; height: 100%;
     }
-    /* Panel off-screen left by default */
+    /* panel offscreen left */
     #infoPanel {
       position: absolute; top: 0; left: -30%;
       width: 30%; height: 100%;
@@ -22,55 +21,65 @@
       overflow-y: auto;
       transition: left 0.5s ease;
       z-index: 5;
+      display: flex;
     }
-    /* Slide panel in */
+    /* slide in */
     #container.info-open #infoPanel {
       left: 0;
     }
+    /* center content */
     #infoPanel .content {
-      padding: 20px;
+      margin: auto;
+      width: 80%;
+      text-align: center;
     }
     /* Town name */
     #townName {
-      margin: 0 0 10px;
-      font-size: 1.5em;
+      margin: 0 0 8px;
+      font-size: 1.6em;
+      line-height: 1.2;
     }
-    /* Small info (area + pop) */
+    /* small info */
     .small-info p {
       margin: 4px 0;
-      font-size: 0.85em;
+      font-size: 0.9em;
+      line-height: 1.2;
     }
     .small-info .title {
       color: navy;
       font-weight: bold;
+      margin-right: 4px;
     }
-    /* Big info (community type + capacity) */
+    /* big info */
     .big-info {
       margin-top: 20px;
     }
     .big-info p {
       margin: 8px 0;
-      font-size: 1.2em;
+      font-size: 1.1em;
+      line-height: 1.2;
+      white-space: nowrap;
+      overflow: hidden;
+      text-overflow: ellipsis;
     }
     .big-info .title {
       color: darkgreen;
       font-weight: bold;
+      margin-right: 4px;
     }
-    /* Main area (search + map) */
+    /* Main */
     #main {
       position: absolute; top: 0; left: 0;
       width: 100%; height: 100%;
       transition: left 0.5s ease, width 0.5s ease;
     }
-    /* Push main over when panel open */
     #container.info-open #main {
       left: 30%; width: 70%;
     }
     /* Search bar */
     .search-panel {
       position: absolute; top: 0; left: 0; right: 0;
-      height: 60px;
-      background: #f4f4f4;
+      height: 60px; background: #f4f4f4;
       display: flex; align-items: center;
       padding: 0 20px; gap: 10px;
       box-shadow: 0 2px 4px rgba(0,0,0,0.1);
@@ -82,7 +91,7 @@
     }
     .search-panel button {
       padding: 8px 16px; font-size: 16px; font-weight: bold;
-      background: #005e95; color: #fff; border: none; border-radius: 4px;
+      background: #005e95; color: white; border: none; border-radius: 4px;
       cursor: pointer;
     }
     .search-panel button:hover {
@@ -91,39 +100,36 @@
     /* Map iframe */
     #mapFrame {
       position: absolute; top: 60px; left: 0; right: 0; bottom: 0;
-      border: none;
-      width: 100%; height: calc(100% - 60px);
+      border: none; width: 100%; height: calc(100% - 60px);
     }
   </style>
 </head>
 <body>
 
   <div id="container">
-    <!-- Sliding info panel -->
     <div id="infoPanel">
       <div class="content">
         <h2 id="townName">Town Name</h2>
         <div class="small-info">
-          <p><span class="title">Area in Sq. Miles:</span> <span id="areaField"></span></p>
-          <p><span class="title">Population (2020):</span> <span id="popField"></span></p>
+          <p><span class="title">Area in Sq. Miles:</span><span id="areaField"></span></p>
+          <p><span class="title">Population (2020):</span><span id="popField"></span></p>
         </div>
         <div class="big-info">
-          <p><span class="title">Community Type:</span> <span id="commField"></span></p>
-          <p><span class="title">Unit Capacity Requirement:</span> <span id="unitField"></span></p>
+          <p><span class="title">Community Type:</span><span id="commField"></span></p>
+          <p><span class="title">Unit Capacity Requirement:</span><span id="unitField"></span></p>
         </div>
       </div>
     </div>
 
-    <!-- Main (search + map) -->
     <div id="main">
       <div class="search-panel">
-        <input  type="text"  id="townSearch" placeholder="Enter Town Name" />
+        <input type="text" id="townSearch" placeholder="Enter Town Name"/>
         <button id="doSearch">Search</button>
         <button id="doClear">Clear</button>
       </div>
       <iframe
         id="mapFrame"
-        src="map_with_button.html?cachebust=3"
+        src="map_with_button.html?cachebust=4"
         title="Map View"
       ></iframe>
     </div>
@@ -133,26 +139,26 @@
     const container = document.getElementById('container');
     const mapFrame  = document.getElementById('mapFrame');
 
-    document.getElementById('doSearch').addEventListener('click', () => {
+    document.getElementById('doSearch').addEventListener('click', ()=>{
       const name = document.getElementById('townSearch').value.trim();
       if (!name) return;
       mapFrame.contentWindow.postMessage({ type:'search-town', name }, '*');
     });
 
-    document.getElementById('doClear').addEventListener('click', () => {
+    document.getElementById('doClear').addEventListener('click', ()=>{
       mapFrame.contentWindow.postMessage({ type:'clear-town' }, '*');
       container.classList.remove('info-open');
     });
 
-    window.addEventListener('message', e => {
+    window.addEventListener('message', e=>{
       const msg = e.data;
       if (msg?.type === 'town-selected') {
         const p = msg.properties;
-        document.getElementById('townName').textContent = p.Municipality || 'N/A';
-        document.getElementById('areaField').textContent = p.MBTAStationMunicipaliti_Clip1_A || 'N/A';
-        document.getElementById('popField').textContent  = p.MBTAStationMunicipaliti_Clip1_P || 'N/A';
-        document.getElementById('commField').textContent = p.data0k5Yh_TableToExcel_ExcelT_2 || 'N/A';
-        document.getElementById('unitField').textContent = p["data0k5Yh_TableToExcel_ExcelT_3 "] || 'N/A';
+        document.getElementById('townName').textContent           = p.Municipality  || 'N/A';
+        document.getElementById('areaField').textContent          = p.MBTAStationMunicipaliti_Clip1_A         || 'N/A';
+        document.getElementById('popField').textContent           = p.MBTAStationMunicipaliti_Clip1_P         || 'N/A';
+        document.getElementById('commField').textContent          = p.data0k5Yh_TableToExcel_ExcelT_2         || 'N/A';
+        document.getElementById('unitField').textContent          = p["data0k5Yh_TableToExcel_ExcelT_3 "]     || 'N/A';
         container.classList.add('info-open');
       }
       else if (msg?.type === 'clear-town') {
@@ -160,5 +166,6 @@
       }
     });
   </script>
+
 </body>
 </html>
