--- a/search.html
+++ b/search.html
@@ -8,12 +8,12 @@
       height: 100vh; margin: 0; padding: 0;
       font-family: 'Roboto', sans-serif;
     }
-    /* Container holds panel + main */
+    /* Container for panel + main */
     #container {
       position: relative;
       width: 100%; height: 100%;
     }
-    /* Info panel offscreen left by default */
+    /* Info panel offscreen left */
     #infoPanel {
       position: absolute;
       top: 0; left: -300px;
@@ -24,7 +24,7 @@
       transition: left 0.5s ease;
       z-index: 5;
     }
-    /* Slide it in */
+    /* Slide in */
     #container.info-open #infoPanel {
       left: 0;
     }
@@ -50,7 +50,6 @@
     .big-info p {
       margin: 8px 0;
       font-size: 1em;
-      /* prevent overflow */
       white-space: nowrap;
       overflow: hidden;
       text-overflow: ellipsis;
@@ -67,7 +66,7 @@
       width: 100%; height: 100%;
       transition: left 0.5s ease, width 0.5s ease;
     }
-    /* Push main over 300px when panel open */
+    /* Push main over when panel open */
     #container.info-open #main {
       left: 300px;
       width: calc(100% - 300px);
@@ -156,11 +155,11 @@
       const msg = e.data;
       if (msg?.type === 'town-selected') {
         const p = msg.properties;
-        document.getElementById('townName').textContent          = p.Municipality    || 'N/A';
-        document.getElementById('areaField').textContent         = p.MBTAStationMunicipaliti_Clip1_A     || 'N/A';
-        document.getElementById('popField').textContent          = p.MBTAStationMunicipaliti_Clip1_P     || 'N/A';
-        document.getElementById('commField').textContent         = p.data0k5Yh_TableToExcel_ExcelT_2     || 'N/A';
-        document.getElementById('unitField').textContent         = p["data0k5Yh_TableToExcel_ExcelT_3 "] || 'N/A';
+        document.getElementById('townName').textContent  = p.Municipality    || 'N/A';
+        document.getElementById('areaField').textContent = p.MBTAStationMunicipaliti_Clip1_A   || 'N/A';
+        document.getElementById('popField').textContent  = p.MBTAStationMunicipaliti_Clip1_P   || 'N/A';
+        document.getElementById('commField').textContent = p.data0k5Yh_TableToExcel_ExcelT_2   || 'N/A';
+        document.getElementById('unitField').textContent = p.data0k5Yh_TableToExcel_ExcelT_3    || 'N/A';
         container.classList.add('info-open');
       }
       else if (msg?.type === 'clear-town') {
