--- a/search.html
+++ b/search.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8"/>
-  <title>Search + Info + Map with Legend</title>
+  <title>Search + Info + Map with Legend & Close</title>
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet"/>
   <style>
     html, body {
@@ -14,7 +14,7 @@
       width: 100%; height: 100%;
     }
 
-    /* Info panel */
+    /* Info Panel */
     #infoPanel {
       position: absolute; top: 0; left: -320px;
       width: 320px; height: 100%;
@@ -25,24 +25,55 @@
       z-index: 5;
     }
     #container.info-open #infoPanel { left: 0; }
-    #infoPanel .content { padding: 30px; }
-    #townName { font-size: 1.5em; margin: 0 0 12px; }
-    .small-info p { margin: 6px 0; font-size: 1em; line-height: 1.4; }
-    .small-info .title { color: navy; font-weight: 700; margin-right: 6px; }
-    .big-info { margin-top: 24px; }
+
+    /* Close “X” */
+    #closePanel {
+      position: absolute;
+      top: 8px; right: 8px;
+      font-size: 20px;
+      line-height: 1;
+      background: none;
+      border: none;
+      color: #ccc;
+      cursor: pointer;
+      padding: 4px;
+    }
+    #closePanel:hover {
+      color: #999;
+    }
+
+    #infoPanel .content {
+      padding: 30px 20px 20px; /* leave space for the X */
+    }
+    #townName {
+      font-size: 1.5em;
+      margin: 0 0 12px;
+    }
+    .small-info p {
+      margin: 6px 0; font-size: 1em; line-height: 1.4;
+    }
+    .small-info .title {
+      color: navy; font-weight: 700; margin-right: 6px;
+    }
+    .big-info {
+      margin-top: 24px;
+    }
     .big-info p {
       margin: 10px 0; font-size: 1em; line-height: 1.4;
       white-space: nowrap; overflow: hidden; text-overflow: ellipsis;
     }
-    .big-info .title { color: darkgreen; font-weight: 700; margin-right: 6px; }
+    .big-info .title {
+      color: darkgreen; font-weight: 700; margin-right: 6px;
+    }
 
-    /* Legend shared styles */
+    /* Legend Styles */
     .legend {
       margin-top: 30px;
-      font-family: 'Roboto', sans-serif;
       font-size: 0.9em; line-height: 1.5;
-      background: #fff; border: 1px solid #003f63;
-      border-radius: 6px; padding: 10px 12px;
+      background: #fff;
+      border: 1px solid #003f63;
+      border-radius: 6px;
+      padding: 10px 12px;
       box-shadow: 0 2px 4px rgba(0,0,0,0.2);
     }
     .legend h3 {
@@ -57,9 +88,7 @@
     }
     .legend-title {
       display: block;
-      color: #003f63;
-      font-weight: 700;
-      margin-bottom: 6px;
+      color: #003f63; font-weight: 700; margin-bottom: 6px;
     }
     .legend-item {
       display: flex; align-items: center; margin: 6px 0;
@@ -67,7 +96,7 @@
     .legend-item .patch {
       width: 18px; height: 18px;
       border: 1px solid #fff;
-      box-shadow: 0 0 0 1px #fff inset;
+      box-shadow: inset 0 0 0 1px #fff;
       margin-right: 8px; flex-shrink: 0;
     }
 
@@ -104,20 +133,22 @@
     .search-panel input {
       flex: 1; padding: 8px; font-size: 16px;
       border: 1px solid #ccc; border-radius: 4px;
-      font-family: 'Roboto', sans-serif;
     }
     .search-panel button {
       padding: 8px 16px; font-size: 16px; font-weight: 700;
       background: #005e95; color: #fff;
       border: none; border-radius: 4px; cursor: pointer;
-      font-family: 'Roboto', sans-serif;
     }
-    .search-panel button:hover { background: #003f63; }
+    .search-panel button:hover {
+      background: #003f63;
+    }
 
     /* Map iframe */
     #mapFrame {
-      position: absolute; top: 60px; left: 0; right: 0; bottom: 0;
-      border: none; width: 100%; height: calc(100% - 60px);
+      position: absolute;
+      top: 60px; left: 0; right: 0; bottom: 0;
+      border: none;
+      width: 100%; height: calc(100% - 60px);
     }
   </style>
 </head>
@@ -132,9 +163,9 @@
       <div class="legend-group">
         <span class="legend-title">Community Types</span>
         <div class="legend-item"><span class="patch" style="background:#2A6D93"></span>Rapid Transit</div>
-        <div class="legend-item"><span class="patch" style="background:#508EB1"></span>Commuter Rail</div>
-        <div class="legend-item"><span class="patch" style="background:#B4B474"></span>Adjacent community</div>
-        <div class="legend-item"><span class="patch" style="background:#E3E3B6"></span>Adjacent small town</div>
+        <div class="legend-item"><span class="patch" style="background:#508EB1"></span>Commuter Rail</div>
+        <div class="legend-item"><span class="patch" style="background:#B4B474"></span>Adjacent community</div>
+        <div class="legend-item"><span class="patch" style="background:#E3E3B6"></span>Adjacent small town</div>
       </div>
 
       <div class="legend-group exempt">
@@ -145,10 +176,11 @@
 
     <!-- Info panel -->
     <div id="infoPanel">
+      <button id="closePanel" aria-label="Close">&times;</button>
       <div class="content">
-        <h2 id="townName">Town Name</h2>
+        <h2 id="townName">Town Name</h2>
         <div class="small-info">
-          <p><span class="title">Area in Sq. Miles:</span><span id="areaField"></span></p>
+          <p><span class="title">Area in Sq. Miles:</span><span id="areaField"></span></p>
           <p><span class="title">Population (2020):</span><span id="popField"></span></p>
         </div>
         <div class="big-info">
@@ -162,10 +194,10 @@
 
           <div class="legend-group">
             <span class="legend-title">Community Types</span>
-            <div class="legend-item"><span class="patch" style="background:#2A6D93"></span>Rapid Transit</div>
-            <div class="legend-item"><span class="patch" style="background:#508EB1"></span>Commuter Rail</div>
-            <div class="legend-item"><span class="patch" style="background:#B4B474"></span>Adjacent community</div>
-            <div class="legend-item"><span class="patch" style="background:#E3E3B6"></span>Adjacent small town</div>
+            <div class="legend-item"><span class="patch" style="background:#2A6D93"></span>Rapid Transit</div>
+            <div class="legend-item"><span class="patch" style="background:#508EB1"></span>Commuter Rail</div>
+            <div class="legend-item"><span class="patch" style="background:#B4B474"></span>Adjacent community</div>
+            <div class="legend-item"><span class="patch" style="background:#E3E3B6"></span>Adjacent small town</div>
           </div>
 
           <div class="legend-group exempt">
@@ -173,7 +205,6 @@
             <div class="legend-item"><span class="patch" style="background:#9C9C9C"></span></div>
           </div>
         </div>
-
       </div>
     </div>
 
@@ -186,7 +217,7 @@
       </div>
       <iframe
         id="mapFrame"
-        src="map_with_button.html?cachebust=7"
+        src="map_with_button.html?cachebust=8"
         title="Map View"
       ></iframe>
     </div>
@@ -196,7 +227,9 @@
     const container = document.getElementById('container'),
           mapFrame  = document.getElementById('mapFrame'),
           input     = document.getElementById('townSearch'),
-          btnSearch = document.getElementById('doSearch');
+          btnSearch = document.getElementById('doSearch'),
+          btnClose  = document.getElementById('closePanel'),
+          btnClear  = document.getElementById('doClear');
 
     function runSearch() {
       const name = input.value.trim();
@@ -208,10 +241,12 @@
       if (e.key === 'Enter') runSearch();
     });
 
-    document.getElementById('doClear').addEventListener('click', () => {
+    function clearAll() {
       mapFrame.contentWindow.postMessage({ type:'clear-town' }, '*');
       container.classList.remove('info-open');
-    });
+    }
+    btnClear.addEventListener('click', clearAll);
+    btnClose.addEventListener('click', clearAll);
 
     window.addEventListener('message', e => {
       const msg = e.data;
